buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
      classpath 'net.tascalate.javaflow:net.tascalate.javaflow.tools.gradle:2.8.1'
    }
}

apply plugin: "java"
apply plugin: "continuations"
apply plugin: "application"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.tascalate.javaflow:net.tascalate.javaflow.api:2.8.1'
    testImplementation 'junit:junit:4.13.2'
}

group = 'net.tascalate.javaflow.examples'
version = '1.2.0'
description = 'Tascalate JavaFlow Examples / SkyNet'
java.sourceCompatibility = JavaVersion.VERSION_1_8

application {
    mainClass = 'org.apache.commons.javaflow.examples.skynet.SkynetSuspend'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}


